--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -13,3 +13,11 @@ jobs:
       -
         name: Dump context
         uses: crazy-max/ghaction-dump-context@v1
+
+      - name: Check out src from Git
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # needed by setuptools-scm
+
+      - name: Display git info about clone
+        run: git tag --points-at HEAD
