Test ability to detect failures

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,3 +25,6 @@ jobs:
 
       - name: Display git info about clone
         run: git tag --points-at HEAD
+
+      - name: Now we fail
+        run: exit 1
