--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,22 @@
 name: release
 
 on:
-  workflow_run:
-    workflows: [check]
-    # branches:
-    #   - main
-    #   - 'releases/**'
-    types:
-      - completed  # remember completed does not mean success!
-    create:
+  # workflow_run:
+  #   workflows: [check]
+  #   # branches:
+  #   #   - main
+  #   #   - 'releases/**'
+  #   types:
+  #     - completed  # remember completed does not mean success!
+  #   create:
+  create:
+    tags:
 
 jobs:
   release:
     environment: release
+    uses: ssbarnea/gha-playground/.github/workflows/check.yml@main
+
     runs-on: ubuntu-latest
     steps:
       -
