--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,14 @@ on:
     tags:
 
 jobs:
+  check:
+    runs-on: ubuntu-latest
+    uses: ssbarnea/gha-playground/.github/workflows/check.yml@main
+
   release:
     environment: release
     name: release
-    uses: ssbarnea/gha-playground/.github/workflows/check.yml@main
+    needs: check
 
     runs-on: ubuntu-latest
     steps:
