include tag in release job name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
 
   release:
     environment: release
-    name: release
+    name: release ${{ github.event.ref }}
     needs: before-release
 
     runs-on: ubuntu-latest
